Fixed few things

--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,17 @@
   animation-duration: 1000ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
 }
+
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+}
